--- a/ForgeMenuChoice/i18n/default.json
+++ b/ForgeMenuChoice/i18n/default.json
@@ -6,13 +6,14 @@
 
   // GMCM
   "mod-description": "Allows you to pick your enchantment at the forge.",
-  "EnableTooltipAutogeneration.title": "Enables tooltip autogeneration.",
-  "EnableTooltipAutogeneration.description": "Enables tooltip autogeneration from journal scrap 9. Disable this if you have an mod that edits that.",
 
   "TooltipBehavior.title": "Tooltip Behavior.",
   "TooltipBehavior.description": "Whether or not to display tooltips that tell you what each enchantment does. Immersive: tooltips are only shown after seeing a certain journal scrap.",
 
   "config.TooltipBehavior.On": "On",
   "config.TooltipBehavior.Off": "Off",
-  "config.TooltipBehavior.Immersive": "Immersive"
+  "config.TooltipBehavior.Immersive": "Immersive",
+
+  "EnableTooltipAutogeneration.title": "Enables tooltip autogeneration.",
+  "EnableTooltipAutogeneration.description": "Enables tooltip autogeneration from journal scrap 9. Disable this if you have an mod that edits that."
 }
